# OOP_simulation_game

./: .gitignore  CMakeLists.txt  README.md  coverage.CPPs_Choice.cpp.html  coverage.CPPs_Fight.cpp.html  coverage.CPPs_Opponent.cpp.html  coverage.CPPs_Player.cpp.html  coverage.CPPs_SpecialWeapon.cpp.html  coverage.CPPs_Status.cpp.html  coverage.CPPs_Stick.cpp.html  coverage.CPPs_Sword.cpp.html  coverage.CPPs_Weapons.cpp.html  coverage.Headers_Fight.h.html  coverage.Headers_Opponent.h.html  coverage.Headers_Player.h.html  coverage.Headers_SpecialWeapon.h.html  coverage.Headers_Status.h.html  coverage.Headers_Stick.h.html  coverage.Headers_Sword.h.html  coverage.Headers_Weapons.h.html  coverage.html  coverage.main.cpp.html  main.cpp
.github/workflows/: c-cpp.yml
CPPs/: Choice.cpp  Fight.cpp  Opponent.cpp  Player.cpp  SpecialWeapon.cpp  Status.cpp  Stick.cpp  Sword.cpp  Weapons.cpp
Headers/: Choice.h  Fight.h  Opponent.h  Player.h  SpecialWeapon.h  Status.h  Stick.h  Sword.h  Weapons.h
testFile/: testFile.txt.txt
